--- a/index.html
+++ b/index.html
@@ -105,8 +105,9 @@
                     <div class="research-card fade-up delay-200">
                         <div class="card-icon">🛡️</div>
                         <h3>Mniejsza Toksyczność</h3>
-                        <p>Krzem łagodzi szkodliwe działanie metali ciężkich, ograniczając ich transport z korzeni do
-                            pędów.</p>
+                        <p>Ocenia się również, że dodatek krzemu może łagodzić szkodliwe działanie metali ciężkich.
+                            Aplikacja krzemu zwiększa tolerancje roślin na ich toksyczność poprzez ograniczenie ich
+                            transportu z korzeni do pędów.</p>
                     </div>
                     <div class="research-card fade-up delay-200">
                         <div class="card-icon">✅</div>
